8145754: PhaseIdealLoop::is_scaled_iv_plus_offset() does not match AddI

Is_scaled_iv_plus_offset() should handle AddI nodes with scaled iv as second input.

Reviewed-by: kvn